Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntObjUndefinedField.quorum
class Main
    Integer v = undefined
    action Main
        Test(v)
    end

    action Test(Integer var)
        if var = undefined
            output "passed"
        end
    end
end
