Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjText.quorum
class Main
    action Main
        text v = text
        Test(v)
    end

    action Test(Integer var)
    end
end
